<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:padding="16dp"
    android:background="@drawable/login_background"
    tools:context=".auth.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:layout_width="160dp"
            android:layout_height="160dp"
            android:src="@drawable/account"/>

        <com.example.subs_inter.customView.EmailCV
            android:id="@+id/email_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:hint="@string/email"
            android:padding="18dp"
            android:textColor="@color/black"
            android:textSize="20sp"/>

        <com.example.subs_inter.customView.PasswordCV
            android:id="@+id/password_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:hint="@string/password"
            android:padding="18dp"
            android:textColor="@color/black"
            android:textSize="20sp"/>

        <RadioButton
            android:id="@+id/remember_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/remember_me"
            android:layout_marginEnd="120dp"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/login_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/button_log"
            android:layout_marginTop="32dp"
            android:padding="18dp"
            android:text="@string/login"
            android:textSize="20sp"/>

        <TextView
            android:id="@+id/register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:clickable="true"
            android:focusable="true"
            android:text="@string/or_login_with"
            android:textColor="@color/black"
            android:textSize="18sp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="34dp"
                android:layout_height="34dp"
                android:layout_margin="16dp"
                android:src="@drawable/google"/>

            <ImageView
                android:layout_width="34dp"
                android:layout_height="34dp"
                android:layout_margin="16dp"
                android:src="@drawable/facebook"/>
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>
